[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Towers/ProximitySpell.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 1024.0

[node name="ProximitySpell" type="Node2D"]
script = ExtResource( 1 )

[node name="CastTimer" type="Timer" parent="."]
autostart = true

[node name="CastArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CastArea"]
shape = SubResource( 1 )

[connection signal="timeout" from="CastTimer" to="." method="_on_CastTimer_timeout"]
